fix textoverflow

--- a/client/assets/styles/scss/views/views-kubernetes-setup.scss
+++ b/client/assets/styles/scss/views/views-kubernetes-setup.scss
@@ -23,6 +23,10 @@
     height: 39px;
     line-height: 38px;
 
+    &.text-overflow {
+      display: inline-block;
+    }
+
     &.shrink {
       flex: 0 0 66px;
     }
